Fixed darkmode flicker

--- a/src/app/static/css/tailwindglobals.css
+++ b/src/app/static/css/tailwindglobals.css
@@ -1,4 +1,7 @@
 body {
     font-family: 'Inter', sans-serif;
-    transition: background-color 0.3s ease, color 0.3s ease;
   }
+
+body.transitions-enabled {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
